--- a/library-api/package.json
+++ b/library-api/package.json
@@ -10,6 +10,7 @@
   "author": "Matthew English",
   "license": "MIT",
   "dependencies": {
+    "@types/express": "^5.0.0",
     "express": "^4.21.1"
   }
 }
