--- a/pet-adoption-api/package.json
+++ b/pet-adoption-api/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node --watch index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+
   },
   "author": "Matthew English",
   "license": "MIT",
